<resources>
    <string name="app_name">SWAssignment2</string>

    <string name="title">Super Blackjack</string>
    <string name="name_label">Player Login:</string>
    <string name="playerLabel">Player:</string>
    <string name="dealerLabel">Dealer</string>
    <string name="Login">Login</string>
    <string name="Register">Account Creation</string>
    <string name="title_activity_register">Settings</string>
    <string name="logo">Logo</string>
    <string name="subtitle">PROG3210 Assignment 2</string>
    <string name="register_name">Username:</string>
    <string name="register_password">Password:</string>
    <string name="Profile">Profile</string>
    <string name="admin_label">Administration</string>
    <string name="admin_play">Play Game</string>
    <string name="admin_player">Player</string>
    <string name="admin_execute">Execute</string>
    <string name="admin_return">Return</string>
    <string name="admin_get">Get</string>
    <string name="admin_getPlayer">Get Player</string>
    <string name="admin_managePlayer">Manage Player</string>
</resources>
