<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="ca.on.conestogac.swassignment2.RegisterActivity">

    <TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="casual"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TableRow>
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id = "@+id/txtLoginName"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:ems="10" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_password"
            android:textSize="24sp"
            android:textStyle="bold" />
        <EditText
            android:id = "@+id/txtPassword"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:inputType = "textPassword"
            android:ems="10" />
    </TableRow>
    <TableRow>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "I am at least 18 years old" />
    </TableRow>
    <Button
        android:id = "@+id/buttonRegister"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/Register" />
</TableLayout>
